[tool.poetry]
name = "asam-qc-framework"
version = "1.0.0"
description = "Python ASAM Quality Checker Framework module. Executes bundles and creates result reports."
authors = ["Danilo Romano <danilo@ivex.ai>","Patrick Abrahão <patrick@ivex.ai>","Tung Dinh <tung@ivex.ai>"]
license = "MPL-2.0"
readme = "README.md"
packages = [
    { include = "qc_framework" },
]

[tool.poetry.dependencies]
python = "^3.10"
asam-qc-baselib = "^1.0.0rc1"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"

[tool.poetry.scripts]
qc_runtime = 'qc_framework.runtime:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
